Fix missing/incorrect property key bug