@@ -100,7 +100,11 @@ public final class GameElementFactory {
         Class chosenParameterSubclass = Class.forName(chosenSubclassName);
         Object[] constructorParameters = getConstructorArguments(properties, chosenParameterSubclass);
         System.out.println(Arrays.asList(constructorParameters));
-        System.out.println(Arrays.stream(constructorParameters).map(object -> object.getClass()).collect(Collectors.toList()));
+        //System.out.println(Arrays.stream(constructorParameters).map(object -> object.getClass()).collect(Collectors
+        //        .toList()));
+        System.out.println(properties);
+        System.out.println(Arrays.stream(chosenParameterSubclass.getConstructors()[0].getParameters())
+                .map(param -> param.getAnnotation(ElementProperty.class).value()).collect(Collectors.toList()));
         System.out.println(Arrays.asList(chosenParameterSubclass.getConstructors()[0].getParameters()));
         System.out.println(Arrays.stream(chosenParameterSubclass.getConstructors()[0].getParameters())
                 .map(param -> param.getType()).collect(Collectors.toList()));
@@ -158,6 +162,7 @@ public final class GameElementFactory {
             } else {*/
                 //String propertyValueAsString = properties.get(parameterDescription);
                 //Class parameterClass = constructorParameters[i].getType();
+                System.out.println(parameterIdentifier + " " + parameterDescription);
                 constructorArguments[i] = properties.get(parameterDescription);//setConstructorParameter
                 // (propertyValueAsString,
                 // parameterClass);
